--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <li class="header__linke">
             <a
               data-goto="header"
-              href="#"
+              href="#7"
               class="header__link"
             >
               Головна
@@ -34,7 +34,7 @@
           <li class="header__linke">
             <a
               data-goto="main"
-              href="#"
+              href="#6666"
               class="header__link"
             >
               Про Нас
@@ -43,7 +43,7 @@
           <li class="header__linke">
             <a
               data-goto="main"
-              href="#2"
+              href="#77"
               class="header__link"
             >
               Галерея
@@ -52,7 +52,7 @@
           <li class="header__linke">
             <a
               data-goto="footer"
-              href="#"
+              href="#6666"
               class="header__link"
             >
               Екскурсії
@@ -70,7 +70,6 @@
       </nav>
       <div class="header__top">
         <a
-          target="blank"
           class="header__logo"
           href="https://artem-chornyi.github.io/Museum/"
         >
@@ -81,14 +80,14 @@
         <h1 class="header__title">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__buy">
           <div class="header__text">КВИТКИ</div>
-          <a href="/" class="header__stor">
+          <a href="https://www.facebook.com/namu.museum/about/?ref=page_internal" class="header__stor">
             <img src="../src/images/Vector(1).png" alt="buy">
           </a>
         </div>
       </div>
     </header>
     <main class="main">
-      <div class="main__events">
+      <div class="main__events" id="777">
         <h2 class="main__title">
           Актуальні події
         </h2>
@@ -156,7 +155,7 @@
         </div>
       </div>
       <div class="gallery">
-        <h2 class="gallery__title">
+        <h2 class="gallery__title" id="77">
           Галерея
         </h2>
         <div class="img-slider swiper-container mySwiper">
@@ -260,7 +259,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="7">
       <div class="footer__content">
         <h2 class="footer__title">Підписка</h2>
         <span class="footer__text">
@@ -278,6 +277,7 @@
             placeholder="E-mail"
             name="email"
             id="email"
+            required
           >
           <button class="footer__button cursor">
             <img src="./images/footerbut.png" alt=">">
@@ -293,17 +293,17 @@
                 <a
                   class="footer__mes"
                   target="blank"
-                  href=""
+                  href="https://www.facebook.com/namu.museum/"
                 >
                   <img
                   class="footer__facb"
                   src="./images/facebook.svg"
-                  alt="instagram">
+                  alt="facebook">
                 </a>
                 <a
                   class="footer__mes"
                   target="blank"
-                  href=""
+                  href="https://www.instagram.com/namu.museum/?hl=ru"
                 >
                   <img
                     class="footer__inst"
@@ -314,7 +314,7 @@
             </div>
             <div class="footer__navig">
               <div class="footer__days">
-                <div class="footer__day">
+                <div class="footer__day" id="6666">
                   <span class="footer__work">
                     <p class="footer__bold">12:00-20:00</p>&nbsp;среда
                   </span>
@@ -350,7 +350,7 @@
         </div>
         <div class="footer__menu">
           <ul class="footer__list">
-            <a class="footer__link" href="">Галерея</a>
+            <a class="footer__link" href="#77">Галерея</a>
             <a class="footer__link" href="">Виставки та події</a>
             <a class="footer__link" href="">Відвідування</a>
             <a class="footer__link" href="">Стати нашим другом</a>
