--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,11 @@
         <h1 class="header__title">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__buy">
           <div class="header__text">КВИТКИ</div>
-          <a href="https://www.facebook.com/namu.museum/about/?ref=page_internal" class="header__stor">
+          <a
+            target="blank"
+            href="https://www.facebook.com/namu.museum/about/?ref=page_internal"
+            class="header__stor"
+          >
             <img src="../src/images/Vector(1).png" alt="buy">
           </a>
         </div>
