--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="main-content">
     <header class="header">
       <div class="header__burger-logo-container">
-        <div class="header__burger">=</div>
+        <div class="header__burger"><div class="uil uil-bars header__uil-bars"></div></div>
         <div class="header__logo">NA<br>VU</div>
         <div></div>
       </div>
