--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     >
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="1111">
       <div class="header__section">
         ПОДІЇ
       </div>
@@ -292,7 +292,7 @@
         <div>
           <div class="footer__adres">
             <div class="footer__top">
-              <a class="footer__logo" href="/">NA <br>MU</a>
+              <a class="footer__logo" href="#1111">NA <br>MU</a>
               <div class="footer__mesenger" >
                 <a
                   class="footer__mes"
@@ -375,6 +375,7 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         spaceBetween: 30,
+        loop: true,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
@@ -385,6 +386,7 @@
       var swiper = new Swiper(".mySwiper--2", {
         slidesPerView: 4,
         spaceBetween: 30,
+        loop: true,
         centeredSlides: true,
         pagination: {
           el: ".swiper-pagination",
