--- a/src/index.html
+++ b/src/index.html
@@ -393,6 +393,10 @@
           clickable: true,
           dynamicBullets: true,
         },
+        mousewheel: {
+          sensivity: 1,
+          eventsTarget: ".img-slider__imeges"
+        },
       });
     </script>
   </body>
