--- a/src/index.html
+++ b/src/index.html
@@ -385,6 +385,7 @@
 
       var swiper = new Swiper(".mySwiper--2", {
         slidesPerView: 4,
+        speed: 800,
         spaceBetween: 30,
         loop: true,
         centeredSlides: true,
@@ -396,6 +397,11 @@
         mousewheel: {
           sensivity: 1,
           eventsTarget: ".img-slider__imeges"
+        },
+        autoplay: {
+          delay: 3000,
+          stopOnLastSlide: false,
+          disableOnInteraction: false,
         },
       });
     </script>
