--- a/src/index.html
+++ b/src/index.html
@@ -143,70 +143,75 @@
     </div>
     <footer class="footer">
       <!-- 1 -->
-      <!-- <div class="footer__left-container">
+      <div class="footer__left-container">
         <span>NAMU</span>
-        <div>
+        <div class="footer__logo-container-instgram-facebook">
           <img
-            src="images/Group.png"
+            src="images/facebook-letter-logo.svg"
             alt="link facebook"
             class="footer__link-photo-facebook"
           >
           <img
-            src="images/instagram (3).png"
+            src="images/instagram (3).svg"
             alt="link instagram"
             class="footer__link-photo-instagram"
           >
         </div>
-      </div> -->
-      <!-- 2 -->
-      <div class="footer__center-container">
-        <div class="footer__center-left-block">
-          <div class="footer__center-left-title">Графік роботи</div>
-          <div class="footer__center-left-text">
-            <strong>12:00 — 20:00</strong>середа<br>
-            <strong>12:00 — 20:00</strong> четвер <br>
-            <strong>12:00 — 20:00</strong> п’ятниця <br>
-            <strong>11:00 — 19:00</strong> субота <br>
-            <strong>11:00 — 19:00</strong> неділя <br>
-          </div>
-          <div class="footer__center-middle-text">
-            <p>
-              Вихідні понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину
-              <br> до закриття музею.
-            </p>
-          </div>
-        </div>
-        <div class="footer__center-right-block">
-          <div class="footer__center-right-title">Контакти:</div>
-          <div class="footer__center-right-text">
-            вул. М. Грушевського, 6; <br>
-            Київ, 01001 <br>
-            тел. +38 (044) 278-13-57 <br>
-            факс +38 (044) 278-74-54 <br>
-            e-mail: info@namu.kiev.ua
-          </div>
-        </div>
       </div>
-
-      <div class="footer__line"></div>
-
-      <!-- 3 -->
-      <div class="footer__right-container">
-        <div class="footer__galery">
-          <div class="footer__galery-text">Галерея</div><br>
-          <div class="footer__galery-text">Виставки та події</div> <br>
-          <div class="footer__galery-text">Відвідування</div> <br>
-          <div class="footer__galery-text">Стати нашим другом</div> <br>
+      <!-- 2 -->
+      <div class="footer__container-for-block">
+        <div class="footer__center-container">
+          <div class="footer__center-left-block">
+            <div class="footer__center-left-title">Графік роботи</div>
+            <div class="footer__center-left-text">
+              <strong>12:00 — 20:00</strong>середа<br>
+              <strong>12:00 — 20:00</strong> четвер <br>
+              <strong>12:00 — 20:00</strong> п’ятниця <br>
+              <strong>11:00 — 19:00</strong> субота <br>
+              <strong>11:00 — 19:00</strong> неділя <br>
+            </div>
+            <div class="footer__center-middle-text">
+              <p>
+                Вихідні понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину
+                <br> до закриття музею.
+              </p>
+            </div>
+          </div>
+          <div class="footer__center-right-block">
+            <div class="footer__center-right-title">Контакти:</div>
+            <div class="footer__center-right-text">
+              вул. М. Грушевського, 6; <br>
+              Київ, 01001 <br>
+              тел. +38 (044) 278-13-57 <br>
+              факс +38 (044) 278-74-54 <br>
+              e-mail: info@namu.kiev.ua
+            </div>
+          </div>
         </div>
-        <div class="footer__about-us">
-          <div class="footer__galery-text">Про Нас</div><br>
-          <div class="footer__galery-text">Магазин</div> <br>
-          <div class="footer__galery-text">Блог</div> <br>
-          <div class="footer__galery-text">Контакти</div> <br>
-
+        <div class="footer__line"></div>
+        <!-- 3 -->
+        <div class="footer__right-container">
+          <div class="footer__galery">
+            <div class="footer__galery-text">Галерея</div><br>
+            <div class="footer__galery-text">Виставки та події</div> <br>
+            <div class="footer__galery-text">Відвідування</div> <br>
+            <div class="footer__galery-text">Стати нашим другом</div> <br>
+          </div>
+          <div class="footer__about-us">
+            <div class="footer__galery-text">Про Нас</div><br>
+            <div class="footer__galery-text">Магазин</div> <br>
+            <div class="footer__galery-text">Блог</div> <br>
+            <div class="footer__galery-text">Контакти</div> <br>
+          </div>
         </div>
       </div>
     </footer>
+    <div class="copiryght copiryght--for-museum">
+      <div class="copiryght__footer-container">
+        <div class="copiryght__text-design-by">Copyright © 2019. All Rights Reserved.</div>
+        <div class="copiryght__text-design-by">Designed by Zhyriada Marina</div>
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
