--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <div class="main__galery-text">
           <div class="main__galery-text-header">
             <h5>ВИСТАВКА</h5>
-            <h5>26.08-29.11.2019</h5>
+            <h5 class="main__galery-sub-header">26.08-29.11.2019</h5>
           </div>
           <h3 class="main__galery-text-title">
             Йду і повертаюсь
@@ -57,7 +57,7 @@
         <div class="main__galery-text">
           <div class="main__galery-text-header">
             <h5>ВИСТАВКА</h5>
-            <h5>26.08-29.11.2019</h5>
+            <h5 class="main__galery-sub-header">26.08-29.11.2019</h5>
           </div>
           <h3 class="main__galery-text-title-reverse">
             І спогади і мрії
