--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="main-content">
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__burger-logo-container">
         <div class="header__burger"><div class="uil uil-bars header__uil-bars"></div></div>
         <div class="header__logo">NA<br>VU</div>
@@ -28,7 +28,7 @@
       <div class="header__photo"></div>
     </header>
     <main class="main">
-      <h2 class="main__title">Актуальні події</h2>
+      <h2 class="main__title" id="title">Актуальні події</h2>
       <div class="main__container-galery">
         <img
           src="images/Rectangle 2.2.png"
@@ -37,7 +37,7 @@
         >
         <div class="main__galery-text">
           <div class="main__galery-text-header">
-            <h5>ВИСТАВКА</h5>
+            <h5 class="main__sub-title-galery">ВИСТАВКА</h5>
             <h5 class="main__galery-sub-header">26.08-29.11.2019</h5>
           </div>
           <h3 class="main__galery-text-title">
@@ -56,7 +56,7 @@
       >
         <div class="main__galery-text">
           <div class="main__galery-text-header">
-            <h5>ВИСТАВКА</h5>
+            <h5 class="main__sub-title-galery">ВИСТАВКА</h5>
             <h5 class="main__galery-sub-header">26.08-29.11.2019</h5>
           </div>
           <h3 class="main__galery-text-title-reverse">
@@ -84,7 +84,7 @@
         </div>
       </div>
     </div>
-    <main class="main-footer">
+    <main class="main-footer" id="galery">
       <div class="main-footer__header-title">
         Галерея
       </div>
@@ -121,7 +121,7 @@
         <div class="main-footer__round-item"></div>
       </div>
     </main>
-    <div class="main-photo-footer">
+    <div class="main-photo-footer" id="subscribe">
       <div class="main-photo-footer__container">
         <span class="main-photo-footer__title">
           Підписка
@@ -130,32 +130,43 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </span>
         <div class="main-photo-footer__input-container">
-          <input type="email" class="main-photo-footer__input"
+          <form action="../../form-result.php">
+            <input type="email" class="main-photo-footer__input"
             placeholder="E-mail"
           >
-          <button
-            class="main-photo-footer__button"
-          >
-            &#10095;
-          </button>
+            <button
+              type = "submit"
+              class = "main-photo-footer__button"
+            >
+              &#10095;
+            </button>
+          </form>
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <!-- 1 -->
       <div class="footer__left-container">
-        <span>NAMU</span>
+        <span class="footer__namu">NA<br>MU</span>
         <div class="footer__logo-container-instgram-facebook">
-          <img
-            src="images/facebook-letter-logo.svg"
-            alt="link facebook"
-            class="footer__link-photo-facebook"
-          >
-          <img
+          <a href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener">
+            <img
+              src="images/facebook-letter-logo.svg"
+              alt="link facebook"
+              class="footer__link-photo-facebook"
+            >
+          </a>
+          <a href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener">
+            <img
             src="images/instagram (3).svg"
             alt="link instagram"
             class="footer__link-photo-instagram"
           >
+          </a>
         </div>
       </div>
       <!-- 2 -->
@@ -164,7 +175,7 @@
           <div class="footer__center-left-block">
             <div class="footer__center-left-title">Графік роботи</div>
             <div class="footer__center-left-text">
-              <strong>12:00 — 20:00</strong>середа<br>
+              <strong>12:00 — 20:00</strong> середа<br>
               <strong>12:00 — 20:00</strong> четвер <br>
               <strong>12:00 — 20:00</strong> п’ятниця <br>
               <strong>11:00 — 19:00</strong> субота <br>
@@ -192,16 +203,16 @@
         <!-- 3 -->
         <div class="footer__right-container">
           <div class="footer__galery">
-            <div class="footer__galery-text">Галерея</div><br>
-            <div class="footer__galery-text">Виставки та події</div> <br>
-            <div class="footer__galery-text">Відвідування</div> <br>
-            <div class="footer__galery-text">Стати нашим другом</div> <br>
+            <div class="footer__galery-text"> <a class="footer__link-to-store" href="#galery">Галерея</a> </div><br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#title">Виставки та події</a></div> <br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#">Відвідування</a></div> <br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#subscribe">Стати нашим другом</a></div> <br>
           </div>
           <div class="footer__about-us">
-            <div class="footer__galery-text">Про Нас</div><br>
-            <div class="footer__galery-text">Магазин</div> <br>
-            <div class="footer__galery-text">Блог</div> <br>
-            <div class="footer__galery-text">Контакти</div> <br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#header">Про Нас</a></div><br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#">Магазин</a></div> <br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#">Блог</a></div> <br>
+            <div class="footer__galery-text"><a class="footer__link-to-store" href="#footer">Контакти</a></div> <br>
           </div>
         </div>
       </div>
