--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,13 @@
         <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__ticket">
           <span class="header__ticket-container-left">КВИТКИ</span>
-          <span class="header__ticket-container-right">&#10095;</span>
+          <a
+            href="#"
+            rel="noopener"
+            target="_blank"
+          >
+            <span class="header__ticket-container-right">&#10095;</span>
+          </a>
         </div>
       </div>
       <div class="header__photo"></div>
@@ -130,7 +136,7 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </span>
         <div class="main-photo-footer__input-container">
-          <form action="../../form-result.php">
+          <form action="#" method="get">
             <input type="email" class="main-photo-footer__input"
             placeholder="E-mail"
           >
@@ -183,7 +189,7 @@
             </div>
             <div class="footer__center-middle-text">
               <p>
-                Вихідні понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину
+                <strong>Вихідні</strong> понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину
                 <br> до закриття музею.
               </p>
             </div>
@@ -191,11 +197,24 @@
           <div class="footer__center-right-block">
             <div class="footer__center-right-title">Контакти:</div>
             <div class="footer__center-right-text">
-              вул. М. Грушевського, 6; <br>
-              Київ, 01001 <br>
-              тел. +38 (044) 278-13-57 <br>
-              факс +38 (044) 278-74-54 <br>
-              e-mail: info@namu.kiev.ua
+              <a
+                rel="noopener"
+                class="footer__link-to-store"
+                href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4494431,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; <br>
+                Київ, 01001
+              </a>                       <br>
+              <a class="footer__link-to-store" href="tel:++38 (044) 278-13-57">
+                тел. +38 (044) 278-13-57 <br>
+              </a>
+              <a class="footer__link-to-store" href="tel:+38 (044) 278-74-54">
+                факс +38 (044) 278-74-54 <br>
+              </a>
+              <a class="footer__link-to-store" href="mailto:m.bluth@example.com">
+                e-mail: info@namu.kiev.ua
+              </a>
             </div>
           </div>
         </div>
