--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
               placeholder="E-mail"
               required
             >
-            <button type="submit" class="news__button">
+            <button type="reset" class="news__button">
               <img src="./images/Vector (email).svg" alt="icon email">
             </button>
           </form>
@@ -193,7 +193,7 @@
               </div>
               <div class="footer__contacts" id="contacts">
                 <p class="footer__title">Контакти:</p>
-                <p class="footer__text">вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua</p>
+                <p class="footer__text">вул. М. Грушевського, 6;<br>Київ, 01001<br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54<br>e-mail: info@namu.kiev.ua</p>
               </div>
             </div>
           </div>
