--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
             placeholder="E-mail"
           >
             <button
-              type = "submit"
+              type = "reset"
               class = "main-photo-footer__button"
             >
               &#10095;
