--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="scripts/main.js" defer></script>
   </head>
 
   <body class="page">
@@ -29,7 +30,7 @@
         </div>
       </div>
 
-      <nav class="nav header__nav">
+      <nav id="navbar" class="nav header__nav">
         <div class="nav__container">
           <a href="#">
             <span class="logo nav__logo"></span>
