--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <div class="main__container-galery">
         <img
           src="images/Rectangle 2.2.png"
-          alt="photo"
+          alt="photo of sea"
           class="main__galery-image"
         >
         <div class="main__galery-text">
@@ -57,7 +57,7 @@
       <div class="main__container-galery-reverse">
         <img
         src="images/Rectangle 4.2.png"
-        alt="photo"
+        alt="photo-women and Indian peafowl"
         class="main__galery-image-reverse"
       >
         <div class="main__galery-text">
@@ -77,7 +77,7 @@
     <div class="main__photo-center-container">
       <img
         src="images/Rectangle_20.1.png"
-        alt="photo"
+        alt="photo about sunset"
         class="main__photo-center"
       >
       <div class="main__photo-info">
@@ -96,27 +96,27 @@
       </div>
       <div class="main-footer__galery">
         <img src="images/Rectangle 13.8.png"
-          alt="photo"
+          alt="photo ethnik close"
           class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 3.2.png"
-          alt="photo"
+          alt="photo old Ukraine vilage"
           class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 24.png"
-          alt="photo"
+          alt="photo about geez in avilage"
           class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 13.6.png"
-          alt="photo"
+          alt="photo about summer in a park"
           class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 13.7.png"
-          alt="photo"
+          alt="photo about sea sunset"
           class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 25.png"
-          alt="photo"
+          alt="photo about people in a vilage"
           class="main-footer__galery-photo"
         >
       </div>
