--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="shortcut icon"
+      type="image/x-icon"
+      href="images/icons8-puzzle-30.png"
+    >
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
