--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <div></div>
       </div>
       <div class="header__ticket-title-container">
+        <div class="header__extion-text">ПОДІЇ</div>
         <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__ticket">
           <span class="header__ticket-container-left">КВИТКИ</span>
