--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,20 @@
   </head>
   <body class="page__body">
     <header class="page__header">
+      <div class="menu">
+        <div class="container">
+          <ul>
+            <li><a href="">Галерея</a></li>
+            <li><a href="">Виставки та події</a></li>
+            <li><a href="">Відвідування</a></li>
+            <li><a href="">Стати нашим другом</a></li>
+            <li><a href="">Про нас</a></li>
+            <li><a href="">Магазин</a></li>
+            <li><a href="">Блог</a></li>
+            <li><a href="">Контакти</a></li>
+          </ul>
+        </div>
+      </div>
       <a href="#">
         <img
           class="menu-icon"
@@ -224,24 +238,79 @@
       <section class="footer__bottom">
         <div class="top-container">
           <div class="title-container">
-            <h1 class="top-title">
-              na<br>mu
-            </h1>
+            <a
+              href="#"
+            >
+              <h1 class="top-title">
+                na<br>mu
+              </h1>
+            </a>
+
           </div>
           <div class="top-link">
-            <img
-              class="link__facebook"
-              src="./images/Facebook.svg"
-              alt="facebook"
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.facebook.com/namu.museum/"
             >
-            <img
-              class="link__instagram"
-              src="./images/instagram.svg"
-              alt="instagram"
+              <img
+                class="link__facebook"
+                src="./images/Facebook.svg"
+                alt="facebook"
+              >
+            </a>
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.instagram.com/namu.museum/"
             >
+              <img
+                class="link__instagram"
+                src="./images/instagram.svg"
+                alt="instagram"
+              >
+            </a>
           </div>
         </div>
+        <div class="schedules">
+          <p>Графік роботи</p>
+          <p>12:00 - 20:00 середа</p>
+          <p>12:00 - 20:00 четвер</p>
+          <p>12:00 - 20:00 п'ятниця</p>
+          <p>11:00 - 19:00 субота</p>
+          <p>11:00 - 19:00 неділя</p>
+        </div>
+        <div class="contacts">
+          <a class="contacts__link" href="#">вул. М. Грушевського, 6;<br>Київ, 01001</a>
+          <a class="contacts__link" href="#">тел. +38 (044) 278-13-57</a>
+          <a class="contacts__link" href="#">факс +38 (044) 278-74-54</a>
+          <a class="contacts__link" href="#">e-mail: info@namu.kiev.ua</a>
+        </div>
+
+        <div class="">
+          Вихідні понеділок, вівторок
+          Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+
+        <div class="links">
+          <div class="links__left">
+            <a href="links__link">Галерея</a>
+            <a href="links__link">Виставки та події</a>
+            <a href="links__link">Відвідування</a>
+            <a href="links__link">Стати нашим другом</a>
+          </div>
+
+          <div class="links__right">
+            <a href="links__link">Про нас</a>
+            <a href="links__link">Магазин</a>
+            <a href="links__link">Блог</a>
+            <a href="links__link">Контакти</a>
+          </div>
+        </div>
+
       </section>
+      <p class="bottom__description">Designed by Zhyriada Marina</p>
+      <p class="bottom__subscription">Copyright © 2019. All Rights Reserved.</p>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
