--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                 <article>
                   <img
                     class="slider__image"
-                    src="./images/gallery-1.jpg"
+                    src="./images/gallery-6.jpg"
                     alt="image gallery"
                   >
                 </article>
@@ -187,7 +187,7 @@
                 <article>
                   <img
                     class="slider__image"
-                    src="./images/gallery-3.jpg"
+                    src="./images/1.jpg"
                     alt="image gallery"
                   >
                 </article>
