--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           class="buy-link"
           href="#"
         >
-          <p>квитки</p>
+          <p class="tickets">квитки</p>
         </a>
       </div>
     </header>
@@ -84,31 +84,35 @@
         </div>
 
         <div class="card">
-          <img
+          <div class="card__container">
+            <img
             class="card__image"
             src="./images/2.jpg"
             alt="actual image"
           >
-
-          <div class="card__subscriptions">
-            <div class="card__subtitle">
-              виставка
-            </div>
-
-            <div class="card__date">
-              26.08-29.11.2019
-            </div>
           </div>
-          <h3 class="card__title">
-            І спогади і мрії
-          </h3>
 
-          <p class="card__description">
-            Національний художній музей України до 100 річчя
-            від дня народження видатної української художниці
-            Тетяни Яблонської відкриває ретроспективну ювілейну
-            виставку «І спогади і мрії».
-          </p>
+          <div class="card__container">
+            <div class="card__subscriptions">
+              <div class="card__subtitle">
+                виставка
+              </div>
+
+              <div class="card__date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="card__title">
+              І спогади і мрії
+            </h3>
+
+            <p class="card__description">
+              Національний художній музей України до 100 річчя
+              від дня народження видатної української художниці
+              Тетяни Яблонської відкриває ретроспективну ювілейну
+              виставку «І спогади і мрії».
+            </p>
+          </div>
         </div>
       </section>
 
@@ -272,24 +276,26 @@
             </a>
           </div>
         </div>
-        <div class="schedules">
-          <p>Графік роботи</p>
-          <p>12:00 - 20:00 середа</p>
-          <p>12:00 - 20:00 четвер</p>
-          <p>12:00 - 20:00 п'ятниця</p>
-          <p>11:00 - 19:00 субота</p>
-          <p>11:00 - 19:00 неділя</p>
-        </div>
-        <div class="contacts">
-          <a class="contacts__link" href="#">вул. М. Грушевського, 6;<br>Київ, 01001</a>
-          <a class="contacts__link" href="#">тел. +38 (044) 278-13-57</a>
-          <a class="contacts__link" href="#">факс +38 (044) 278-74-54</a>
-          <a class="contacts__link" href="#">e-mail: info@namu.kiev.ua</a>
-        </div>
-
-        <div class="">
-          Вихідні понеділок, вівторок
-          Каса припиняє роботу за 1 годину до закриття музею
+        <div class="info">
+          <div class="info__schedules">
+            <p class="info__title">Графік роботи</p>
+            <p><strong>12:00 - 20:00 </strong>середа</p>
+            <p><strong>12:00 - 20:00 </strong>четвер</p>
+            <p><strong>12:00 - 20:00 </strong>п'ятниця</p>
+            <p><strong>11:00 - 19:00 </strong>субота</p>
+            <p><strong>11:00 - 19:00 </strong>неділя</p>
+            <p class="info__subscription">
+              Вихідні понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div class="info__contacts">
+            <p class="info__title">Контакти:</p>
+            <a class="info__link" href="#">вул. М. Грушевського, 6;<br>Київ, 01001</a> <br>
+            <a class="info__link" href="#">тел. +38 (044) 278-13-57</a> <br>
+            <a class="info__link" href="#">факс +38 (044) 278-74-54</a> <br>
+            <a class="info__link" href="#">e-mail: info@namu.kiev.ua</a> <br>
+          </div>
         </div>
 
         <div class="links">
