--- a/src/index.html
+++ b/src/index.html
@@ -62,37 +62,35 @@
             src="./images/1.jpg"
             alt="actual image"
           >
+          <div class="card__container">
+            <div class="card__subscriptions">
+              <div class="card__subtitle">
+                виставка
+              </div>
 
-          <div class="card__subscriptions">
-            <div class="card__subtitle">
-              виставка
+              <div class="card__date">
+                26.08-29.11.2019
+              </div>
             </div>
+            <h3 class="card__title">
+              Йду і повертаюсь
+            </h3>
 
-            <div class="card__date">
-              26.08-29.11.2019
-            </div>
+            <p class="card__description">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку - українське
+              мистецтво другої половини 1980-1995 років.
+            </p>
           </div>
-          <h3 class="card__title">
-            Йду і повертаюсь
-          </h3>
-
-          <p class="card__description">
-            Національний Художній Музей України презентує
-            унікальну частину колекції Градобанку - українське
-            мистецтво другої половини 1980-1995 років.
-          </p>
         </div>
 
         <div class="card">
-          <div class="card__container">
-            <img
-            class="card__image"
-            src="./images/2.jpg"
-            alt="actual image"
-          >
-          </div>
-
-          <div class="card__container">
+          <img
+          class="card__image card__image--reversed"
+          src="./images/2.jpg"
+          alt="actual image"
+        >
+          <div class="card__container card__container--reversed">
             <div class="card__subscriptions">
               <div class="card__subtitle">
                 виставка
@@ -117,11 +115,13 @@
       </section>
 
       <section class="main__middle">
-        <img
-          class="main__image"
-          src="./images/center.jpg"
-          alt="sunrise"
-        >
+        <div class="main__image_container">
+          <img
+            class="main__image"
+            src="./images/center.jpg"
+            alt="sunrise"
+          >
+        </div>
 
         <div class="announcement">
           <div class="announcement__subscriptions">
@@ -177,7 +177,7 @@
                 <article>
                   <img
                     class="slider__image"
-                    src="./images/gallery-6.jpg"
+                    src="./images/gallery-1.jpg"
                     alt="image gallery"
                   >
                 </article>
@@ -191,7 +191,7 @@
                 <article>
                   <img
                     class="slider__image"
-                    src="./images/1.jpg"
+                    src="./images/gallery-3.jpg"
                     alt="image gallery"
                   >
                 </article>
